@@ -50,4 +50,20 @@ Falls Sie die obige Installation nicht auf Ihrem Arbeitsrechner durchführen kö
 * Digitales Flipchart
   * https://docs.google.com/presentation/d/1RU_S7xZjT4JkLw_fuat_TWQ5XoTw40_VTwQgc1fya4A/edit?usp=sharing
 
+## REST Server
 
+### Remote
+
+* browse to http://h2908727.stratoserver.net:8080/people, you will see some data
+* REST-API supports CRUD on endpoint /people, supported mediatype is JSON
+  * Swagger UI available at http://h2908727.stratoserver.net:8080/swagger-ui.html
+
+### Local
+* Download executable artefact from resources
+* start executable java -jar org.javacream.training.rest.people.server-1.0.jar
+* Java 10+: java --add-modules java.xml.bind -jar org.javacream.training.rest.people.server-1.0.jar
+* web server will startup using port 8080 and embedded database
+  * change port using --server.port=
+* browse to localhost:8080/people, you will see some data
+* REST-API supports CRUD on endpoint /people, supported mediatype is JSON
+  * Swagger UI available at http://localhost:8080/swagger-ui.html
